# WARD-Webtoon-SFX

./: .gitignore  LICENSE  README.md  inference.py  pyproject.toml  train.py
configs/: config.yaml
src/ward/data/: __init__.py  sfx_engine.py
src/ward/models/: ocr_net.py  texting_net.py
src/ward/models/components/: __init__.py  ash.py  encoder.py
